--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app{
   background-color: linear-gradient(#e66465, #9198e5);
-  color: white;
+  color: black;
   height: 100vh;
   display: flex;
   flex-direction: column;
